@@ -1,5 +1,8 @@
 2000-06-24  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* gumps.cc (Stats_gump_object): Show name.
+	* exult.cc: 'z' key brings up statistics.
+	* Weapon readied automatically.  Weapons.dat, armor.dat read.
 	* Hunger (everyone's favorite feature!)
 	* More fiddling (possibly improvement) in followers of Avatar.
 
